[gd_scene load_steps=2 format=3 uid="uid://ch3cspvl5qxdy"]

[ext_resource type="Script" uid="uid://bhcqrqb30cs3f" path="res://Player/Controllers/inventory_contoller.gd" id="1_tdlbx"]

[node name="InventoryContoller" type="Node2D"]
script = ExtResource("1_tdlbx")

[node name="ActiveItem" type="Node2D" parent="."]

[node name="StowedItem" type="Node2D" parent="."]

[node name="HeadEquip" type="Node2D" parent="."]

[node name="BodyEquip" type="Node2D" parent="."]

[node name="FootEquip" type="Node2D" parent="."]

[node name="CharmEquip" type="Node2D" parent="."]
